# simple-etl-pipeline-1

./: .gitignore  README.md  pyproject.toml
dags/: etl_pipeline_dag.py
data/: etl_intermediate.pkl  sample_data.csv
dzun-local/: I want to schedule it run on every minutes.md  Running-Scripts.sh  dunghd: Create a new Python project
etl_pipeline/: __init__.py  airflow_tasks.py  extract.py  load.py  main.py  transform.py
tests/: __init__.py  test_etl_pipeline.py
